<resources>
    <string name="app_name">Learn Numbers</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="speak">Speak</string>
    <string name="random">Random</string>
    <string name="space">0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Numbers</string>
    <string name="tab_text_2">Time</string>
    <string name="tab_text_3">Clock</string>

</resources>
