<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_num3_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/up"
                app:srcCompat="@drawable/arrow_up" />

            <ImageView
                android:id="@+id/imageView_num2_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/up"
                app:srcCompat="@drawable/arrow_up" />

            <ImageView
                android:id="@+id/imageView_num1_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/up"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/arrow_up" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="200sp" />

            <TextView
                android:id="@+id/textView_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="200sp" />

            <TextView
                android:id="@+id/textView_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="200sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_num3_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/down"
                app:srcCompat="@drawable/arrow_down" />

            <ImageView
                android:id="@+id/imageView_num2_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/down"
                app:srcCompat="@drawable/arrow_down" />

            <ImageView
                android:id="@+id/imageView_num1_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/down"
                app:srcCompat="@drawable/arrow_down" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView_tts"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/speak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <ImageView
        android:id="@+id/imageView_random"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

</androidx.constraintlayout.widget.ConstraintLayout>